Fix delete issue
