# swagger_server/swagger/swagger.yaml
@@ -37,8 +37,37 @@ paths:
         "409":
           description: "already exists"
       x-swagger-router-controller: "swagger_server.controllers.default_controller"
+  /student/{student_id}:
+    get:
+      summary: "Find student by ID"
+      description: "Returns a single student"
+      operationId: "get_student_by_id"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - name: "subject"
+        in: "query"
+        description: "The subject name"
+        required: false
+        type: "string"
+      - name: "student_id"
+        in: "path"
+        description: "ID of student to return"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Student"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "student not found"
+      x-swagger-router-controller: "swagger_server.controllers.default_controller"
     delete:
-      summary: "Remove an existing student"
       description: ""
       operationId: "delete_student"
       produces:
@@ -61,53 +90,25 @@ paths:
         "404":
           description: "student not found"
       x-swagger-router-controller: "swagger_server.controllers.default_controller"
-  /student/{student_id}:
-    get:
-      summary: "Find student by ID"
-      description: "Returns a single student"
-      operationId: "get_student_by_id"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - name: "student_id"
-        in: "path"
-        description: "ID of student to return"
-        required: true
-        type: "integer"
-        format: "int64"
-      - name: "subject"
-        in: "query"
-        description: "The subject name"
-        required: false
-        type: "string"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/Student"
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "student not found"
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
 definitions:
   Student:
     type: "object"
     properties:
       student_id:
         type: "integer"
+        format: "int64"
       first_name:
         type: "string"
       last_name:
         type: "string"
       grades:
-        type: "object"
-        additionalProperties:
+        type: "array"
+        items:
           type: "integer"
     example:
       student_id: 0
       last_name: "last_name"
       grades:
-        key: 6
+      - 6
+      - 6
       first_name: "first_name"
